<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RPS</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_rpsgame">RPSGameActivity</string>
    <string name="string_R">바위</string>
    <string name="string_S">가위</string>
    <string name="string_P">보</string>
    <string name="string_result">결과</string>
    <string name="string_before">비밀</string>
    <string name="string_win">이겼다</string>
    <string name="string_lose">졌다</string>
    <string name="string_nogame">다시한번</string>
    <string name="string_start">시작</string>
    <string name="string_null" />
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_demo_setting">DemoSettingActivity</string>

</resources>