<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutGame"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RPSGameActivity" >

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/buttonS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_S" />

        <Button
            android:id="@+id/buttonR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_R" />
        
        <Button
            android:id="@+id/buttonP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_P" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/string_before"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutBottom"
        android:layout_alignParentRight="true"
        android:text="@string/string_before"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/string_result"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>